--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>BA-Project: Start page</title>
-    <link rel="stylesheet" media="all" href="css/style.css"/>
+    <!--<link rel="stylesheet" media="all" href="css/style.css"> -->
+    <link rel="stylesheet" media="all" th:href="@{/css/style.css}"/>
 </head>
 <body>
     <h1>Start page</h1>
